# ripple

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py
docs/: index.md  requirements.txt
figures/: README.md
notebooks/: Generating_waveforms.ipynb  Untitled.ipynb  Untitled1.ipynb  analyze_matches.ipynb  calculate_nrtidalv3_waveform.py  check_IMRD_NRTv2.ipynb  check_IMRPhenomD.ipynb  check_NRTidal.ipynb  check_NRTidal_bilby.ipynb  check_NRTidalv2.ipynb  check_NRTidalv2_debug.ipynb  check_NRTidalv3.ipynb  check_SineGaussian.ipynb  check_TaylorF2.ipynb  check_TaylorF2QM.ipynb  compare_gwfast.ipynb  data_example.ipynb  hp.npy  matches_NRTidal.ipynb  plot_tidal_matches.ipynb  ratio_NRTidalv2.ipynb  ratio_TaylorF2.ipynb  test_NRsurrogate.ipynb
src/: check_sine_gaussian.ipynb
src/diffwaveform/: __init__.py  constants.py  typing.py  utils.py
src/ripple/: __init__.py  constants.py  noise.py  ripple.py  typing.py  utils_tidal.py
src/ripplegw/: FD_waveform.py  __init__.py  constants.py
test/: NRTidal_matches.csv  README.md  Untitled.ipynb  benchmark_waveform.py  check_NRTidal.py  check_PPE_waveform.py  check_tidal_waveform_match.py  check_waveform_match.py  delete_me_range_lambda_tildes.py  match_analysis.py  phenomP_documentation.md  psd.txt  ripple_phenomD_matches.txt  ripple_phenomPv2_matches.txt  spotcheck_phenompv2.py  test_IMRPhenomX.py  test_conversion.py  test_imrphenomd.py  test_imrphenompv2.py
test/lalref_test/: LALSimIMRPhenomP.c  ctest  ctest.c  ctest_broken.c  ctest_phenomD.c  makefile
test/old_tests/: test_IMRPhenomX.py  (+3 more)
(+57 files in other folders)
