[metadata]
name = ripplegw
version = 0.0.9
description = A small jax package for differentiable and fast gravitational wave data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gravitational waves, jax
url = https://ripple.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/tedwards2412/ripple
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jax
    jaxlib
    numpy

[options.package_data]
* = *.dat

[options.packages.find]
where = src
